Make sure screen.colorDepth/screen.pixelDepth don't include the bits used for alpha

Fixes <http://webkit.org/b/42972> <rdar://problem/8234071>
screen.colorDepth and screen.pixelDepth return 32 on Windows, but
should return 24 (according to CSSOM View and Firefox)

Reviewed by Darin Adler.

WebCore:

* platform/win/PlatformScreenWin.cpp:
(WebCore::screenDepth): If Windows says there are 32 bits per pixel,
return 24 instead, as 32 includes the alpha component but this
function is supposed to ignore the alpha component.

LayoutTests:

Update screen.colorDepth/screen.pixelDepth test to not allow values
that contain bits for alpha

* fast/dom/Window/window-screen-properties-expected.txt: Updated
results.
* fast/dom/Window/window-screen-properties.html: Changed only to
expect 16 or 24.

Canonical link: https://commits.webkit.org/59440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68808 268f45cc-cd09-0410-ab3c-d52691b4dbfc