WebCore/platform/win/PlatformScreenWin.cpp
@@ -68,6 +68,11 @@ static DEVMODE deviceInfoForWidget(Widget* widget)
 int screenDepth(Widget* widget)
 {
     DEVMODE deviceInfo = deviceInfoForWidget(widget);
+    if (deviceInfo.dmBitsPerPel == 32) {
+        // Some video drivers return 32, but this function is supposed to ignore the alpha
+        // component. See <http://webkit.org/b/42972>.
+        return 24;
+    }
     return deviceInfo.dmBitsPerPel;
 }
 
